8237586: Shenandoah: provide option to disable periodic GC
Reviewed-by: zgu