@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2018, Red Hat, Inc. All rights reserved.
+ * Copyright (c) 2017, 2020, Red Hat, Inc. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -68,7 +68,17 @@ public class TestPeriodicGC {
         };
 
         for (String h : enabled) {
-            testWith("Short period with " + h,
+            testWith("Zero interval with " + h,
+                    false,
+                    "-Xlog:gc",
+                    "-XX:+UnlockDiagnosticVMOptions",
+                    "-XX:+UnlockExperimentalVMOptions",
+                    "-XX:+UseShenandoahGC",
+                    "-XX:ShenandoahGCHeuristics=" + h,
+                    "-XX:ShenandoahGuaranteedGCInterval=0"
+            );
+
+            testWith("Short interval with " + h,
                     true,
                     "-Xlog:gc",
                     "-XX:+UnlockDiagnosticVMOptions",
@@ -78,7 +88,7 @@ public class TestPeriodicGC {
                     "-XX:ShenandoahGuaranteedGCInterval=1000"
             );
 
-            testWith("Long period with " + h,
+            testWith("Long interval with " + h,
                     false,
                     "-Xlog:gc",
                     "-XX:+UnlockDiagnosticVMOptions",
@@ -89,7 +99,17 @@ public class TestPeriodicGC {
             );
         }
 
-        testWith("Short period with traversal mode",
+        testWith("Zero interval with traversal mode",
+                 false,
+                 "-Xlog:gc",
+                 "-XX:+UnlockDiagnosticVMOptions",
+                 "-XX:+UnlockExperimentalVMOptions",
+                 "-XX:+UseShenandoahGC",
+                 "-XX:ShenandoahGCMode=traversal",
+                 "-XX:ShenandoahGuaranteedGCInterval=0"
+        );
+
+        testWith("Short interval with traversal mode",
                  true,
                  "-Xlog:gc",
                  "-XX:+UnlockDiagnosticVMOptions",
@@ -99,7 +119,7 @@ public class TestPeriodicGC {
                  "-XX:ShenandoahGuaranteedGCInterval=1000"
         );
 
-        testWith("Long period with traversal mode",
+        testWith("Long interval with traversal mode",
                  false,
                  "-Xlog:gc",
                  "-XX:+UnlockDiagnosticVMOptions",
@@ -109,7 +129,7 @@ public class TestPeriodicGC {
                  "-XX:ShenandoahGuaranteedGCInterval=100000" // deliberately too long
         );
 
-        testWith("Short period with aggressive",
+        testWith("Short interval with aggressive",
                  false,
                  "-Xlog:gc",
                  "-XX:+UnlockDiagnosticVMOptions",
@@ -118,7 +138,18 @@ public class TestPeriodicGC {
                  "-XX:ShenandoahGCHeuristics=aggressive",
                  "-XX:ShenandoahGuaranteedGCInterval=1000"
         );
-        testWith("Short period with passive",
+
+        testWith("Zero interval with passive",
+                 false,
+                 "-Xlog:gc",
+                 "-XX:+UnlockDiagnosticVMOptions",
+                 "-XX:+UnlockExperimentalVMOptions",
+                 "-XX:+UseShenandoahGC",
+                 "-XX:ShenandoahGCMode=passive",
+                 "-XX:ShenandoahGuaranteedGCInterval=0"
+        );
+
+        testWith("Short interval with passive",
                  false,
                  "-Xlog:gc",
                  "-XX:+UnlockDiagnosticVMOptions",
